--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "eslint-config-simenb-base": "^15.0.1",
     "eslint_d": "^7.1.0",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^4.0.0-0",
+    "html-webpack-plugin": "^4.0.0",
     "husky": "^1.0.1",
     "jest": "^24.0.0",
     "jest-watch-typeahead": "^0.2.0",
@@ -67,8 +67,8 @@
     "webpack-cli": "^3.1.0"
   },
   "peerDependencies": {
-    "html-webpack-plugin": "^3.0.4 || ^4.0.0-0",
-    "webpack": "^4.0.0"
+    "html-webpack-plugin": "^3.0.4 || ^4.0.0-0 || ^5.0.0",
+    "webpack": "^4.0.0 || ^5.0.0"
   },
   "engines": {
     "node": ">=6"
