--- a/package.json
+++ b/package.json
@@ -6,21 +6,17 @@
     "lib/",
     "index.d.ts"
   ],
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
     "clean": "del-cli lib/ coverage/ example/*/build example/*/dist",
-    "prebuild": "npm run clean",
-    "build": "babel src/ --out-dir lib/",
-    "postbuild": "prettier lib/* --write",
     "cover": "jest --coverage",
-    "preexample": "npm run clean && npm run build",
+    "preexample": "npm run clean",
     "example": "npm run example:dll && npm run example:polyfill",
     "example:dll": "webpack --config example/dll/webpack.config.dll.js && webpack --config example/dll/webpack.config.js",
     "example:polyfill": "webpack --config example/polyfill/webpack.config.js",
     "lint": "eslint --cache .",
     "update-license": "licensor --width 72",
-    "build-and-update-license": "npm run build && npm run update-license",
-    "prepare": "npm run build",
+    "build-and-update-license": "npm run update-license",
     "pretest": "npm run example",
     "test": "jest"
   },
@@ -37,41 +33,35 @@
   },
   "homepage": "https://github.com/SimenB/add-asset-html-webpack-plugin#readme",
   "dependencies": {
-    "globby": "^9.0.0",
-    "micromatch": "^3.1.3",
-    "p-each-series": "^1.0.0"
+    "globby": "^11.0.2",
+    "micromatch": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.1",
-    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-jest": "^24.0.0",
-    "babel-plugin-add-module-exports": "^1.0.0",
     "classnames": "^2.2.5",
-    "del-cli": "^1.1.0",
-    "eslint": "^5.6.0",
+    "del-cli": "^3.0.1",
+    "eslint": "^7.20.0",
     "eslint-config-simenb-base": "^15.0.1",
-    "eslint_d": "^7.1.0",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^4.0.0",
-    "husky": "^1.0.1",
-    "jest": "^24.0.0",
-    "jest-watch-typeahead": "^0.2.0",
+    "html-webpack-plugin": "^5.2.0",
+    "husky": "^4.3.8",
+    "jest": "^27.0.0-next.3",
+    "jest-watch-typeahead": "^0.6.1",
     "licensor": "^4.0.0",
-    "lint-staged": "^7.0.0",
-    "prettier": "^1.8.2",
-    "slash": "^2.0.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "puppeteer": "^7.1.0",
+    "semantic-release": "^17.3.9",
+    "slash": "^3.0.0",
     "stoppable": "^1.1.0",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^3.1.0"
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0"
   },
   "peerDependencies": {
     "html-webpack-plugin": "^3.0.4 || ^4.0.0-0 || ^5.0.0",
     "webpack": "^4.0.0 || ^5.0.0"
   },
   "engines": {
-    "node": ">=6"
+    "node": ">=10"
   },
   "jest": {
     "testEnvironment": "node",
@@ -83,35 +73,25 @@
         "statements": 100
       }
     },
+    "transform": {},
     "watchPlugins": [
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
     ]
   },
   "lint-staged": {
-    "*.js": [
-      "eslint --fix --cache",
-      "git add"
-    ],
-    "*.{md,json,ts}": [
-      "prettier --write",
-      "git add"
-    ],
-    ".{eslintrc,babelrc}": [
-      "prettier --write",
-      "git add"
-    ]
+    "*.js": "eslint --fix --cache",
+    "*.{md,json,ts}": "prettier --write",
+    ".{eslintrc}": "prettier --write"
   },
   "prettier": {
     "singleQuote": true,
+    "arrowParens": "avoid",
     "trailingComma": "all",
     "proseWrap": "always",
     "overrides": [
       {
-        "files": [
-          ".eslintrc",
-          ".babelrc"
-        ],
+        "files": ".eslintrc",
         "options": {
           "parser": "json"
         }
@@ -139,8 +119,5 @@
     "branches": [
       "main"
     ]
-  },
-  "resolutions": {
-    "**/@types/webpack-sources/source-map": "0.6.1"
   }
 }
