fix test script

--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   "main": "src/index.js",
   "scripts": {
     "clean": "del-cli lib/ coverage/ example/*/build example/*/dist",
-    "cover": "jest --coverage",
-    "preexample": "npm run clean",
-    "example": "npm run example:dll && npm run example:polyfill",
+    "cover": "yarn run test --coverage",
+    "preexample": "yarn run clean",
+    "example": "yarn run example:dll && yarn run example:polyfill",
     "example:dll": "webpack --config example/dll/webpack.config.dll.js && webpack --config example/dll/webpack.config.js",
     "example:polyfill": "webpack --config example/polyfill/webpack.config.js",
     "lint": "eslint --cache .",
     "update-license": "licensor --width 72",
-    "build-and-update-license": "npm run update-license",
-    "pretest": "npm run example",
+    "build-and-update-license": "yarn run update-license",
+    "pretest": "yarn run example",
     "test": "jest"
   },
   "repository": "SimenB/add-asset-html-webpack-plugin",
