migrate to yarn v2

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ coverage/
 build/
 dist/
 .eslintcache
+
+# https://yarnpkg.com/advanced/qa#which-files-should-be-gitignored but nested for e2e directories
+**/.yarn/*
+!**/.yarn/releases
+!**/.yarn/plugins
+!**/.yarn/sdks
+!**/.yarn/versions
+**/.pnp.*
