chore: lock down anymatch dependency

--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
   },
   "resolutions": {
     "**/@types/webpack-sources/source-map": "0.6.1",
+    "anymatch": "^2.0.0",
     "merge2": "~1.2.3"
   }
 }
