--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.2.0",
     "husky": "^4.3.8",
-    "jest": "^27.0.0-next.3",
-    "jest-watch-typeahead": "^0.6.1",
+    "jest": "^27.0.0",
+    "jest-watch-typeahead": "^1.0.0",
     "licensor": "^4.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
