update more deps

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,7 +45,6 @@ jobs:
           yarn add --dev html-webpack-plugin@${{matrix.html-plugin-version }} webpack@${{ matrix.webpack-version }}
           git checkout yarn.lock
       - name: install puppeteer
-        if: ${{ matrix.install-puppeteer }}
         run: |
           yarn add --dev puppeteer
           yarn example
@@ -113,7 +112,7 @@ jobs:
           cache: yarn
       - name: install
         run: yarn
-      - run: npx semantic-release@19
+      - run: yarn semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
