--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "lint": "eslint --cache .",
     "update-license": "licensor --width 72",
     "build-and-update-license": "yarn run update-license",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "husky install",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable"
   },
   "repository": "SimenB/add-asset-html-webpack-plugin",
   "keywords": [
@@ -41,11 +44,12 @@
     "eslint-config-simenb-base": "^15.0.1",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.2.0",
-    "husky": "^4.3.8",
+    "husky": "^7.0.0",
     "jest": "^27.0.0",
     "jest-watch-typeahead": "^1.0.0",
     "licensor": "^4.0.0",
     "lint-staged": "^12.3.5",
+    "pinst": "^3.0.0",
     "prettier": "^2.2.1",
     "puppeteer": "^13.5.0",
     "semantic-release": "^19.0.2",
@@ -107,11 +111,6 @@
         }
       }
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "release": {
     "branches": [
