--- a/package.json
+++ b/package.json
@@ -117,5 +117,8 @@
       "main"
     ]
   },
+  "resolutions": {
+    "@semantic-release/npm/npm": "7.20.6"
+  },
   "packageManager": "yarn@3.2.0"
 }
