--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,10 +46,6 @@ jobs:
         run: |
           yarn
           yarn add --dev html-webpack-plugin@${{matrix.html-plugin-version }} webpack@${{ matrix.webpack-version }}
-          git checkout yarn.lock
-      - name: install puppeteer
-        run: |
-          yarn add --dev puppeteer
           yarn example
           git checkout yarn.lock
       - name: run tests
@@ -71,9 +67,8 @@ jobs:
           node-version: 'lts/*'
           cache: yarn
       - run: yarn
-      - name: install puppeteer
+      - name: build example
         run: |
-          yarn add --dev puppeteer
           yarn example
           git checkout yarn.lock
       - name: run tests
@@ -83,20 +78,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
+          cache: yarn
       - run: yarn
       - run: yarn lint
 
