--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
           # plugin@3 only supports webpack@4
           - html-plugin-version: 3
             webpack-version: 5
-          # webpack@4 does not support node@17
+          # webpack@4 does not support node@17: https://github.com/webpack/webpack/issues/14532
           - node-version: 17.x
             webpack-version: 4
     runs-on: ubuntu-latest
