--- a/.eslintrc
+++ b/.eslintrc
@@ -6,9 +6,6 @@
       "files": ["test.js", "puppeteer.test.js"],
       "env": {
         "jest": true
-      },
-      "rules": {
-        "no-console": "off"
       }
     },
     {
@@ -27,6 +24,7 @@
     }
   ],
   "rules": {
-    "prettier/prettier": ["error", { "trailingComma": "all" }]
+    "prettier/prettier": ["error", { "trailingComma": "all" }],
+    "no-await-in-loop": "off"
   }
 }
