--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [6.x, 8.x, 10.x, 12.x, 14.x, 15.x, 16.x, 17.x]
+        node-version: [12.x, 14.x, 16.x, 17.x]
         html-plugin-version: [3, 4, 5]
         webpack-version: [4, 5]
         exclude:
@@ -28,26 +28,9 @@ jobs:
           # plugin@3 only supports webpack@4
           - html-plugin-version: 3
             webpack-version: 5
-          # webpack@5 and plugin@5 does not support node 6 or 8
-          - node-version: 6.x
-            webpack-version: 5
-          - node-version: 6.x
-            html-plugin-version: 5
-          - node-version: 8.x
-            webpack-version: 5
-          - node-version: 8.x
-            html-plugin-version: 5
-          - node-version: 10.x
-            html-plugin-version: 5
-        include:
-          - node-version: 10.x
-            install-puppeteer: true
-          - node-version: 12.x
-            install-puppeteer: true
-          - node-version: 14.x
-            install-puppeteer: true
-          - node-version: 15.x
-            install-puppeteer: true
+          # webpack@4 does not support node@17: https://github.com/webpack/webpack/issues/14532
+          - node-version: 17.x
+            webpack-version: 4
     runs-on: ubuntu-latest
 
     steps:
@@ -63,11 +46,6 @@ jobs:
         run: |
           yarn
           yarn add --dev html-webpack-plugin@${{matrix.html-plugin-version }} webpack@${{ matrix.webpack-version }}
-          git checkout yarn.lock
-      - name: install puppeteer
-        if: ${{ matrix.install-puppeteer }}
-        run: |
-          yarn add --dev puppeteer
           yarn example
           git checkout yarn.lock
       - name: run tests
@@ -89,9 +67,8 @@ jobs:
           node-version: 'lts/*'
           cache: yarn
       - run: yarn
-      - name: install puppeteer
+      - name: build example
         run: |
-          yarn add --dev puppeteer
           yarn example
           git checkout yarn.lock
       - name: run tests
@@ -101,20 +78,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
+          cache: yarn
       - run: yarn
       - run: yarn lint
 
@@ -133,7 +101,7 @@ jobs:
           cache: yarn
       - name: install
         run: yarn
-      - run: npx semantic-release@17
+      - run: yarn semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
