--- a/package.json
+++ b/package.json
@@ -6,23 +6,20 @@
     "lib/",
     "index.d.ts"
   ],
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "clean": "del-cli lib/ coverage/ example/*/build example/*/dist",
-    "prebuild": "npm run clean",
-    "build": "babel src/ --out-dir lib/",
-    "postbuild": "prettier lib/* --write",
-    "cover": "jest --coverage",
-    "preexample": "npm run clean && npm run build",
-    "example": "npm run example:dll && npm run example:polyfill",
+    "clean": "del-cli lib/ coverage/ \"example/*/build\" \"example/*/dist\"",
+    "cover": "yarn run test --coverage",
+    "example": "yarn run clean && yarn run example:dll && yarn run example:polyfill",
     "example:dll": "webpack --config example/dll/webpack.config.dll.js && webpack --config example/dll/webpack.config.js",
     "example:polyfill": "webpack --config example/polyfill/webpack.config.js",
     "lint": "eslint --cache .",
     "update-license": "licensor --width 72",
-    "build-and-update-license": "npm run build && npm run update-license",
-    "prepare": "npm run build",
-    "pretest": "npm run example",
-    "test": "jest"
+    "build-and-update-license": "yarn run update-license",
+    "test": "jest",
+    "postinstall": "husky install",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable"
   },
   "repository": "SimenB/add-asset-html-webpack-plugin",
   "keywords": [
@@ -37,41 +34,36 @@
   },
   "homepage": "https://github.com/SimenB/add-asset-html-webpack-plugin#readme",
   "dependencies": {
-    "globby": "^9.0.0",
-    "micromatch": "^3.1.3",
-    "p-each-series": "^1.0.0"
+    "globby": "^9.2.0",
+    "micromatch": "^4.0.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.1",
-    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-jest": "^24.0.0",
-    "babel-plugin-add-module-exports": "^1.0.0",
     "classnames": "^2.2.5",
-    "del-cli": "^1.1.0",
-    "eslint": "^5.6.0",
+    "del-cli": "^4.0.1",
+    "eslint": "^8.10.0",
     "eslint-config-simenb-base": "^15.0.1",
-    "eslint_d": "^7.1.0",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^4.0.0",
-    "husky": "^1.0.1",
-    "jest": "^24.0.0",
-    "jest-watch-typeahead": "^0.2.0",
+    "html-webpack-plugin": "^5.2.0",
+    "husky": "^7.0.0",
+    "jest": "^27.0.0",
+    "jest-watch-typeahead": "^1.0.0",
     "licensor": "^4.0.0",
-    "lint-staged": "^7.0.0",
-    "prettier": "^1.8.2",
-    "slash": "^2.0.0",
+    "lint-staged": "^12.3.5",
+    "pinst": "^3.0.0",
+    "prettier": "^2.2.1",
+    "puppeteer": "^13.5.0",
+    "semantic-release": "^19.0.2",
+    "slash": "^3.0.0",
     "stoppable": "^1.1.0",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^3.1.0"
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0"
   },
   "peerDependencies": {
     "html-webpack-plugin": "^3.0.4 || ^4.0.0-0 || ^5.0.0",
     "webpack": "^4.0.0 || ^5.0.0"
   },
   "engines": {
-    "node": ">=6"
+    "node": "^12.13.0 || ^14.15.0 || >=16.0.0"
   },
   "jest": {
     "testEnvironment": "node",
@@ -83,35 +75,25 @@
         "statements": 100
       }
     },
+    "transform": {},
     "watchPlugins": [
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
     ]
   },
   "lint-staged": {
-    "*.js": [
-      "eslint --fix --cache",
-      "git add"
-    ],
-    "*.{md,json,ts}": [
-      "prettier --write",
-      "git add"
-    ],
-    ".{eslintrc,babelrc}": [
-      "prettier --write",
-      "git add"
-    ]
+    "*.{js,ts}": "eslint --fix --cache",
+    "*.{md,json}": "prettier --write",
+    ".eslintrc": "prettier --write"
   },
   "prettier": {
     "singleQuote": true,
+    "arrowParens": "avoid",
     "trailingComma": "all",
     "proseWrap": "always",
     "overrides": [
       {
-        "files": [
-          ".eslintrc",
-          ".babelrc"
-        ],
+        "files": ".eslintrc",
         "options": {
           "parser": "json"
         }
@@ -130,20 +112,13 @@
       }
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "release": {
     "branches": [
       "main"
     ]
   },
   "resolutions": {
-    "**/@types/webpack-sources/source-map": "0.6.1",
-    "anymatch": "^2.0.0",
-    "merge2": "~1.2.3",
-    "stack-utils": "1.0.2"
-  }
+    "@semantic-release/npm/npm": "7.20.6"
+  },
+  "packageManager": "yarn@3.2.0"
 }
