--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -87,7 +87,7 @@ jobs:
       - run: yarn lint
 
   release:
-    if: ${{ github.event_name == 'push' && github.event.ref == 'refs/heads/main' }}
+    if: ${{ github.event_name == 'push' && (github.event.ref == 'refs/heads/main' || github.event.ref == 'refs/heads/v4') }}
     name: Release new version
     needs: [lint, test-node, test-os]
     runs-on: ubuntu-latest
