--- a/package.json
+++ b/package.json
@@ -56,14 +56,14 @@
     "slash": "^3.0.0",
     "stoppable": "^1.1.0",
     "webpack": "^5.23.0",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^5.1.1"
   },
   "peerDependencies": {
-    "html-webpack-plugin": "^3.0.4 || ^4.0.0-0 || ^5.0.0",
-    "webpack": "^4.0.0 || ^5.0.0"
+    "html-webpack-plugin": "^4.0.0 || ^5.0.0",
+    "webpack": "^5.0.0"
   },
   "engines": {
-    "node": "^12.13.0 || ^14.15.0 || >=16.0.0"
+    "node": "^16.13.0 || ^18.12.0 || >=20.0.0"
   },
   "jest": {
     "testEnvironment": "node",
