--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "main": "src/index.js",
   "scripts": {
-    "clean": "del-cli lib/ coverage/ \"example/*/build\" \"example/*/dist\"",
+    "clean": "rimraf --glob lib/ coverage/ 'example/*/build' 'example/*/dist'",
     "cover": "yarn run test --coverage",
     "example": "yarn run clean && yarn run example:dll && yarn run example:polyfill",
     "example:dll": "webpack --config example/dll/webpack.config.dll.js && webpack --config example/dll/webpack.config.js",
@@ -39,7 +39,6 @@
   },
   "devDependencies": {
     "classnames": "^2.2.5",
-    "del-cli": "^4.0.1",
     "eslint": "^8.10.0",
     "eslint-config-simenb-base": "^15.0.1",
     "express": "^4.17.1",
@@ -52,6 +51,7 @@
     "pinst": "^3.0.0",
     "prettier": "^2.2.1",
     "puppeteer": "^20.0.0",
+    "rimraf": "^5.0.0",
     "semantic-release": "^20.0.0",
     "slash": "^3.0.0",
     "stoppable": "^1.1.0",
