--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,6 +44,9 @@ jobs:
         run: yarn cover
       - uses: codecov/codecov-action@v4
         if: ${{ always() }}
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
   test-os:
     name: Test on ${{ matrix.os }} using Node.js LTS
     strategy:
