add node 22 and 23 to ci

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [16.x, 18.x, 20.x, 22.x, 23.x]
         html-plugin-version: [4, 5]
         webpack-version: [5]
     runs-on: ubuntu-latest
